--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,13 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
     <h3>Contact</h3>
+    
+    <!-- Map -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d106194.4941305787!2d-78.948847951922!3d33.71986851961513!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x890068953b552101%3A0xbc0fb115b5d09618!2sMyrtle+Beach%2C+SC!5e0!3m2!1sen!2sus!4v1546292968963" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <br>
+    <!-- Contact Form -->
+    
+    <br>
     <a href='index.html'>About</a>
     <a href='new-properties.html'>New Properties</a>
     <a href='real-estate-listings.html'>Listings</a>
